# heif-rs

./: Cargo.toml  README.md  build.rs
assets/: image.heic
examples/: custom_encoder.rs  decode.rs  encode.rs  encode_buffer.rs  high_bit_depth.rs  parallel_encode.rs  probe.rs  roundtrip.rs  version.rs
src/: decoder.rs  encoder.rs  error.rs  ffi.rs  info.rs  lib.rs  sys.rs
tests/: config.rs  decode.rs  encode.rs  errors.rs  roundtrip.rs
tests/common/: mod.rs
